# OpenBoardView

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  BRDBoard.cpp  BRDBoard.h  BRDFile.cpp  BRDFile.h  Board.h  BoardView.cpp  BoardView.h  CMakeLists.txt  CMakeMetaData.txt  CMakeSettings.json  LICENSE  LICENSE.txt  NetList.cpp  NetList.h  OpenBoardView.rc  OpenBoardView.sln  OpenBoardView.vcxproj  OpenBoardView.vcxproj.filters  PartList.cpp  PartList.h  Project.cmake  README.md  Toolchain-mingw64.cmake  appveyor.yml  build.sh  imgui_impl_dx9.cpp  install.bat  library.tcl  main.cpp  openboardview.conf  openboardview.sh  platform.cpp  platform.h  platform_osx.mm  platform_unix.cpp  (+4 more)
CMake/: FindGLFW3.cmake  cmake_uninstall.cmake.in
CMakeModules/: FindImGui.cmake  FindSDL2.cmake
asset/: .gitignore  CMakeLists.txt  Installer_Welcome.txt  OpenBoardView.rc  Package_Description.txt  app.desktop  appdata.xml  appdata.xml.in  brd.icns  deb_install.sh.in  desktop.in  empty_circle.dds  icon.icns  mime.xml  mimetypes.xml  openboardview.appdata.xml  openboardview.desktop  openboardview.xml  postinst  postrm  project.rc
asset/doc/: openflex-boardview-manual.lyx
asset/hicolor/: README
asset/themes/: XRayBlue-obv.conf
imgui/: imconfig.h  imgui.h  imgui_demo.cpp
lib/: CMakeLists.txt  PlatformLibs.cmake
share/openboardview/scripts/: find_pins.tcl  find_vrm.tcl
src/: BDVFile.cpp  BRDBoard.cpp  BRDFile.cpp  BRDFile.h  Board.h  BoardView.cpp  BoardView.h  CMakeLists.txt  NetList.cpp  NetList.h  PartList.cpp  PartList.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  main.cpp  platform.cpp  platform.h  platform_osx.mm  platform_unix.cpp  platform_win32.cpp  resource.h
src/SDL2/win32/lib/x64/: SDL2test.lib
src/SDL2/win32/lib/x86/: SDL2test.lib
src/android/: .gitignore  AndroidManifest.xml  README.md  build.xml  settings.gradle
src/android/app/: build.gradle
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/java/org/: libsdl
src/android/app/src/main/java/org/openboardview/openboardview/: OBVActivity.java
src/android/app/src/main/res/layout/: main.xml
src/android/app/src/main/res/values/: strings.xml
src/android/jni/: Android.mk  Application.mk
src/android/jni/glad/: .gitignore  Android.mk  gen_glad.sh
src/android/libs/SDL2/: .gitignore  build.gradle
src/android/libs/SDL2/src/main/: AndroidManifest.xml
src/android/src/org/: libsdl
src/android/src/org/openboardview/openboardview/: OBVActivity.java
src/imgui/: CMakeLists.txt  imgui.cpp
src/openboardview/: Android.mk  BDVFile.cpp  BDVFile.h  BRD2File.cpp  BRD2File.h  BRDBoard.cpp  BRDBoard.h  BRDFile.cpp  BRDFile.h  BVRFile.cpp  BVRFile.h  Board.cpp  Board.h  BoardView.cpp  BoardView.h  CMakeLists.txt  FZFile.cpp  FZFile.h  NetList.cpp  NetList.h  PartList.cpp  PartList.h  Searcher.cpp  Searcher.h  SpellCorrector.cpp  SpellCorrector.h  TCL.cpp  TCL.h  TextureDDS.cpp  TextureDDS.h  android.cpp  annotations.cpp  annotations.h  confparse.cpp  confparse.h  filesystem_impl.h  history.cpp  history.h  imgui-autocomplete-list.cpp  imgui-autocomplete-list.h  (+22 more)
src/openboardview/FileFormats/: ADFile.cpp  ADFile.h  ASCFile.cpp  ASCFile.h  BDVFile.cpp  BDVFile.h  BRD2File.cpp  BRD2File.h  BRDAllegroFile.h  BRDFile.cpp  BRDFile.h  BRDFileBase.cpp  BRDFileBase.h  BVR3File.cpp  BVR3File.h  BVRFile.cpp  BVRFile.h  CADFile.cpp  CADFile.h  CAEFile.cpp  CAEFile.h  CSTFile.cpp  CSTFile.h  FZFile.cpp  FZFile.h  GenCADFile.cpp  GenCADFile.h  GenCADFileBnf.h  GenCADFileGrammar.h  XZZPCBFile.cpp  XZZPCBFile.h
src/openboardview/GUI/: BackgroundImage.cpp  BackgroundImage.h  ColorScheme.cpp  ColorScheme.h  Config.cpp  Config.h  DPI.cpp  DPI.h  Fonts.cpp  Fonts.h  Image.cpp  Image.h  widgets.cpp  widgets.h
src/openboardview/GUI/Help/: About.cpp  About.h  Controls.cpp  Controls.h
src/openboardview/GUI/Preferences/: BackgroundImage.cpp  BackgroundImage.h  BoardAppearance.cpp  BoardAppearance.h  Color.cpp  Color.h  Keyboard.cpp  Keyboard.h  Program.cpp  Program.h
src/openboardview/GUI/Preferences/BoardSettings/: BackgroundImage.cpp  BackgroundImage.h  BoardSettings.cpp  BoardSettings.h  PDFFile.cpp  PDFFile.h
src/openboardview/PDFBridge/: PDFBridge.cpp  PDFBridge.h  PDFBridgeEvince.cpp  PDFBridgeEvince.h  PDFBridgeSumatra.cpp  PDFBridgeSumatra.h  PDFFile.cpp  PDFFile.h
src/openboardview/Renderers/: ImGuiRendererSDL.cpp  ImGuiRendererSDL.h  ImGuiRendererSDLGL1.cpp  ImGuiRendererSDLGL1.h  ImGuiRendererSDLGL3.cpp  ImGuiRendererSDLGL3.h  ImGuiRendererSDLGLES2.cpp  ImGuiRendererSDLGLES2.h  Renderers.cpp  Renderers.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  imgui_impl_sdl_gles2.cpp
src/openboardview/UI/Keyboard/: KeyBinding.cpp  KeyBinding.h  KeyBindings.cpp  KeyBindings.h  KeyModifier.cpp  KeyModifier.h  KeyModifiers.cpp  KeyModifiers.h
src/openboardview/win32/: dirent.h  unistd.h
src/sqlite3/: Android.mk  CMakeLists.txt
src/vcpp/: OpenBoardView.rc  OpenBoardView.sln  OpenBoardView.vcxproj  OpenBoardView.vcxproj.filters
src/xcode/OpenBoardView/: Info.plist
src/xcode/OpenBoardView.xcodeproj/: project.pbxproj
src/xcode/OpenBoardView.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/xcode/OpenBoardView.xcodeproj/project.xcworkspace/xcshareddata/: OpenBoardView.xcscmblueprint
src/xcode/OpenBoardView.xcodeproj/project.xcworkspace/xcuserdata/piernov.xcuserdatad/: UserInterfaceState.xcuserstate
src/xcode/OpenBoardView.xcodeproj/xcuserdata/piernov.xcuserdatad/xcschemes/: OpenBoardView.xcscheme  xcschememanagement.plist
utf8/: utf8.h
utilities/: bv2raw.c  bvconv.sh  generate_grammar_header.py  generate_grammar_header.sh
